--- a/src/LAUNCHPAD UI/src/css/style.css
+++ b/src/LAUNCHPAD UI/src/css/style.css
@@ -442,6 +442,12 @@ body {
 .whatsapp .app-icon {
   color: #25D366;
 }
+.facebook .app-icon {
+  color: #1877F2;
+}
+.leetcode .app-icon {
+  color: #FFA500;
+}
 .codepen .app-icon {
   color: #000000;
 }
